MB-56607: [Win32] Fall back to dummy process info...

If RegQueryValueEx(PROC) returns an empty list we'll
stop trying to use the PERF data to look up process
info, and instead just check for process existence
by using OpenProcess and pick out the startup time
with GetProcessTimes.

Given that we cannot look up the per-process data
we can also bypass trying to iterate over all
child processes (as that's currently only used
by sigar_port to collect more per-process data)

Prior to this patch ns_server would try to respawn
sigar_port every time it tried to collect a sample
(as sigar_port would fail to look up the babysitter
port), but as of 7.1 this became a fatal problem
as it would cause ns_server to _fail_ during
startup as it cannot look up the cgroup configuration
as sigar_port keeps on terminating.

Change-Id: I96c29afaaf7f094dbbb59cb1aab5589d624433c4
Reviewed-on: https://review.couchbase.org/c/sigar/+/190024
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Well-Formed: Restriction Checker
Tested-by: Trond Norbye <trond.norbye@couchbase.com>